--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,5 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
+    // Required extensions are LaTeX and PDF Viewer, both from Mathematic Inc
     "version": "2.0.0",
     "tasks": [
         {
